# apilot

./: .env.template  .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  ap_btc.py  ap_stdmom_lo.py  forairead.md  install_local.sh  mongodb_database.py  pyproject.toml  requirements.txt  run_backtest.py  setup.cfg  setup.py  simple_backtest.py  test_backtest.py  test_binance_gateway.py  test_import.py  test_log_system.py  update_imports.py
.github/workflows/: publish.yml
ap_mongodb/: __init__.py  mongodb_database.py  setup.py
apilot/: __init__.py
apilot/algotrading/: __init__.py  algo_engine.py  engine.py  stop_algo.py  template.py  twap_algo.py
apilot/algotrading/algos/: best_limit_algo.py
apilot/analysis/: __init__.py  performance.py
apilot/core/: __init__.py  app.py  constant.py  converter.py  database.py  engine.py  event.py  gateway.py  object.py  setting.py  utility.py
apilot/cta_strategy/: __init__.py  backtest.py  backtesting.py  base.py  constants.py  engine.py  strategy_base.py  template.py  trader.py
apilot/datafeed/: __init__.py  config.py  csv_database.py  data_manager.py  database.py
apilot/datafeed/providers/: __init__.py  csv_provider.py  mongodb_provider.py
apilot/engine/: __init__.py  backtest.py  base_engine.py  email_engine.py  live.py  log_engine.py  main_engine.py  oms_engine.py  risk_engine.py
apilot/event/: engine.py
apilot/execution/: __init__.py
apilot/execution/algo/: __init__.py  algo_base.py  algo_engine.py  algo_template.py  best_limit_algo.py  iceberg_algo.py  sniper_algo.py  stop_algo.py  twap_algo.py
apilot/execution/gateway/: __init__.py  binance.py
apilot/gateway/: binance.py  binance_gateway.py  gateway.py
apilot/optimizer/: __init__.py  gridoptimizer.py  optimizer.py  settings.py
apilot/performance/: __init__.py  aisummary.py  calculator.py  chart.py  plot.py  report.py  reporter.py
apilot/plotting/: __init__.py  chart.py
apilot/portfolio_strategy/: __init__.py  backtesting.py  engine.py  template.py  utility.py
apilot/risk/: __init__.py  engine.py
apilot/riskmanager/: __init__.py  engine.py
apilot/spread_strategy/: __init__.py  algo.py  backtesting.py  base.py  engine.py  template.py
apilot/strategy/: __init__.py  pa_template.py  template.py
apilot/strategy/examples/: pair_trading_strategy.py  pcp_arbitrage_strategy.py  portfolio_boll_channel_strategy.py  trend_following_strategy.py
apilot/trader/: __init__.py  constant.py  converter.py  csv_database.py  engine.py  gateway.py  optimize.py  setting.py
apilot/utils/: __init__.py  array_manager.py  bar_generator.py  indicators.py  logger.py  order_manager.py  symbol.py  utility.py
docs/: CHANGELOG.md  data_guide.md
examples/: backtest_momentum.py  backtest_turtle.py  bt_stdmom.py  bt_stdmom_lo.py  bt_stdmom_opt.py  bt_turtle.py  live_binance.py  momentum_backtest.py  momentum_backtest_opt.py  portfolio_backtest.py  setup_path.py  tick_test_strategy.py  turtle_backtest.py
examples/backtest/: init_env.py  momentum_backtest_opt.py  portfolio_backtest.py  turtle_backtest.py
examples/cta_backtesting/: backtesting_demo.ipynb  cta_add_data_backtest.py  cta_single_backtest.py  init_env.py  momentum_backtest_mongodb.py  momentum_backtest_opt.py  multi_signal_strategy.py  multi_timeframe_strategy.py  tick_test_strategy.py  turtle_backtest.py  turtle_signal_strategy.py
examples/data_converters/: mongo_to_csv.py
examples/data_providers/: README.md  mongodb_provider.py
examples/live_test/: connect_binance.json  run.py
examples/no_ui/: run.py
examples/portfolio_backtesting/: init_env.py  portfolio_backtest.py
examples/portfolio_backtesting/strategies/: pcp_arbitrage_strategy.py  portfolio_boll_channel_strategy.py
examples/spread_backtesting/: sol_stablecoin_spread.py
examples/spread_backtesting/strategies/: basic_spread_strategy.py  statistical_arbitrage_strategy.py
examples/strategies/: trend_following_strategy.py
strategies/: simple_ma_strategy.py
tests/: test_backtest.py  test_bar_generator.py  test_imports.py  test_live.py  test_live_binance.py  test_logging.py
tests/app/: test_backtest_engine.py  test_cta_engine.py
tests/database/: test_database_manager.py  test_mongodb.py  test_mysql.py  test_postgresql.py
tests/gateway/: test_gateway_base.py
tests/integration/: test_data_to_strategy.py  test_multi_gateway.py
tests/trader/: test_datafeed.py  test_event_engine.py  test_live.py  test_log_engine.py  test_main_engine.py  test_objects.py  test_order_manager.py  test_position_manager.py  test_risk_manager.py  test_setting.py  test_utility.py
vnpy/: csv_database.py
vnpy/algotrading/: __init__.py
vnpy/cta_strategy/: __init__.py  backtesting.py  base.py  engine.py  template.py
vnpy/cta_strategy/strategies/: atr_rsi_strategy.py
vnpy/database/: __init__.py
vnpy/gateway/: binance_gateway.py  bybit_gateway.py  okx_gateway.py
vnpy/portfolio_strategy/: __init__.py  backtesting.py  base.py  engine.py  locale.py
vnpy/spread_strategy/: __init__.py  backtesting.py  base.py
vnpy/trader/: constant.py  database.py  datafeed.py  engine.py  event.py  gateway.py  object.py  optimize.py  setting.py  utility.py
vnpy/utility/: logger.py  retry.py
(+10 files in other folders)
