[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apilot"
dynamic = ["version"]
authors = [
    {name = "AlphaPilot", email = "contact@alphapilot.tech"},
]
description = "AI-Driven Qutan, Open to All"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "deap",
    "pyzmq",
    "plotly",
    "tqdm",
    "ccxt",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]
mongodb = [
    "apilot_mongodb>=0.1.0",
]
all = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "apilot_mongodb>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/AlphaPilotHQ/apilot"
Documentation = "https://github.com/AlphaPilotHQ/apilot/wiki"
Repository = "https://github.com/AlphaPilotHQ/apilot"
Issues = "https://github.com/AlphaPilotHQ/apilot/issues"

[tool.setuptools]
packages = ["apilot"]

[tool.ruff]
line-length = 88
target-version = "py310"  # 与项目要求的Python版本一致
extend-exclude = ["__pycache__", "*.pyc", ".git"]
src = ["apilot"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle 错误
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest-style
    "RUF",  # Ruff特有规则
]
ignore = ["E501", "B027"]  

[tool.ruff.lint.isort]
known-first-party = ["apilot"]
section-order = ["standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "validator", "root_validator"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # 允许在 __init__.py 中导入未使用的模块
"apilot/strategy/template.py" = ["B027"]  # 允许抽象基类中有空方法使用@virtual装饰器
