[metadata]
name = apilot
version = attr: vnpy.__version__
author = Your Name
author_email = your.email@example.com
description = A customized lightweight quantitative trading framework based on VeighNa
long_description = file: README.md
long_description_content_type = text/markdown
url = https://your-website-or-github.com
license = MIT
license_files = LICENSE
keywords =
    quant
    trading
    cryptocurrency
    binance
    algorithmic-trading
classifiers =
    Development Status :: 4 - Beta
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    tzlocal
    numpy
    pandas
    matplotlib
    seaborn
    ta-lib
    deap
    pyzmq
    plotly
    tqdm
    ccxt
